[package]
name = "zeknox"
version = "1.0.1"
edition = "2021"
authors = ["OKX"]
description = "ZEro KNOwledge Xcelerated (accelerated ZKP)"
homepage = "https://github.com/okx/zeknox.git"
repository = "https://github.com/okx/zeknox.git"
links = "zeknox"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
]

[[bench]]
name = "gpu_fft_batch"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "lde_batch"
harness = false

[dependencies]
blst = "~0.3.11"
bitflags = "1.3"
bit_reverse = "=0.1.1"


[dev-dependencies]
rand = "0.9.0"
criterion = "0.5.1"
rayon = "1.8.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
# plonky2 = {git="https://github.com/okx/plonky2.git", rev="9a917ba27c26aca6d0e5d9760e8575cd5fc8dd0a"}
# plonky2_field = {git="https://github.com/okx/plonky2.git", rev="9a917ba27c26aca6d0e5d9760e8575cd5fc8dd0a"}
plonky2 = { path = "../../../plonky2-lighter/plonky2" }
plonky2_field = { path = "../../../plonky2-lighter/field" }


[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
bindgen = "0.69.4"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[features]
default = ["cuda"]
gl64 = []
bn254 = []
no_cuda = []
cuda = []
